--- a/src/main/resources/templates/post/show.html
+++ b/src/main/resources/templates/post/show.html
@@ -15,7 +15,7 @@
     <!-- ✅ HEADER -->
     <header class="bg-white shadow sticky top-0 z-50">
       <div class="max-w-7xl mx-auto px-4 py-4 flex items-center justify-between">
-        <a href="list" class="text-2xl font-bold text-blue-600">goorm board</a>
+        <a href="/posts" class="text-2xl font-bold text-blue-600">goorm board</a>
       </div>
     </header>
 
