--- a/src/main/resources/templates/post/list.html
+++ b/src/main/resources/templates/post/list.html
@@ -46,7 +46,7 @@
               <tr th:each="post, status : ${posts}" th:if="${posts != null and !posts.empty}">
                 <td th:text="${status.count}" class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">1</td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm">
-                  <a th:href="@{/posts/{id}(id=${post.id})}" 
+                  <a th:href="@{/posts/{id}(id=${post.seq})}"
                      th:text="${post.title}" 
                      class="text-blue-600 hover:underline font-medium">
                     게시글 제목
