--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div layout:fragment="content">
+        <p th:text="${layoutName}">변수 확인</p>
         <section class="max-w-7xl mx-auto px-4 py-12 text-center">
             <h1 class="text-4xl font-bold mb-6">Goorm Board에 오신 것을 환영합니다!</h1>
             <p class="text-xl text-gray-600 mb-8">Spring Boot + Thymeleaf로 만든 게시판입니다.</p>
