--- a/src/main/resources/templates/post/list.html
+++ b/src/main/resources/templates/post/list.html
@@ -6,7 +6,7 @@
     <title>게시판</title>
 </head>
 <body>
-    <div layout:fragment="content">
+    <main layout:fragment="content">
         <section class="max-w-7xl mx-auto px-4 py-12">
             <div class="flex justify-between items-center mb-6">
                 <h2 class="text-3xl font-bold">게시판</h2>
@@ -50,6 +50,6 @@
                 </table>
             </div>
         </section>
-    </div>
+    </main>
 </body>
 </html>
