--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -15,6 +15,7 @@
             
             <!-- 로그인한 경우 -->
             <div th:if="${session.user}" class="flex items-center space-x-4">
+                <a th:href="@{/auth/profile}" class="px-4 py-2 text-gray-600 hover:text-blue-600 font-medium">프로필</a>
                 <span class="text-gray-700" th:text="${session.user.nickname} + '님'">사용자님</span>
                 <form th:action="@{/auth/logout}" method="post" class="inline">
                     <button type="submit" class="px-4 py-2 text-gray-600 hover:text-blue-600 font-medium">로그아웃</button>
